Fix Blog page image and Next config

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,11 +30,11 @@ body {
   overflow-x: hidden;
 }
 
-img {
+/* img {
   max-width: 100%;
   height: auto;
   display: block;
-}
+} */
 
 .scroll-container::-webkit-scrollbar {
   display: none;
